header and hero

--- a/index.html
+++ b/index.html
@@ -31,10 +31,22 @@
 </head>
 
 
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex align-items-center">
+
+
+
+  </section><!-- End Hero -->
+
 <main>
 
 
-    
+
 </main>
 
 
