created contact and added nav

--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
+  
+  <div class="container d-flex align-items-center">
+  
+  <h1 class="logo mr-auto"><a href="index.html">Parking Prediction      <nav class="nav-menu d-none d-lg-block">
+  
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">The Model</a></li>
+          <li><a href="#team">Team</a></li>
+           <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contact">Contact</a></li>
+
+        </ul>
+      </nav><!-- .nav-menu -->
+      
+      <a href="smart-parking.html" class="get-started-btn scrollto">Smart Parking</a>
+  
+  </div>
     
   </header><!-- End Header -->
 
