--- a/smart-parking.html
+++ b/smart-parking.html
@@ -34,6 +34,17 @@
 
 <body>
 
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top ">
+    <div class="container d-flex align-items-center">
+
+      <h1 class="logo mr-auto"><a href="index.html">Parking Guru</a></h1>
+
+      <a href="index.html" class="get-started-btn scrollto">Home</a>
+
+    </div>
+  </header><!-- End Header -->
+  
 <main id="main">
 
 
