--- a/smart-parking.html
+++ b/smart-parking.html
@@ -45,6 +45,18 @@
     </div>
   </header><!-- End Header -->
   
+    <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex align-items-center">
+
+    <div class="container">
+		<div class="text-center"><h1>Smart Parking</h1>
+			<br/>
+			<h2>Want to be notified when a parking spot opens up at your location? <br/>Please fill out the form below and we will email you once a spot opens up!</h2>
+		</div>
+    </div>
+
+  </section><!-- End Hero -->
+  
 <main id="main">
 
 
