--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
 </head>
 
+<body>
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
-  
-  <div class="container d-flex align-items-center">
-  
-  <h1 class="logo mr-auto"><a href="index.html">Parking Prediction<nav class="nav-menu d-none d-lg-block">
-  
+    <div class="container d-flex align-items-center">
+
+      <h1 class="logo mr-auto"><a href="index.html">Parking Guru</a></h1>
+
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
@@ -49,11 +49,10 @@
 
         </ul>
       </nav><!-- .nav-menu -->
-      
+
       <a href="smart-parking.html" class="get-started-btn scrollto">Smart Parking</a>
-  
-  </div>
-    
+
+    </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
