--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-             temp./=
+             temp.
             </p>
           </div>
         </div>
@@ -128,6 +128,8 @@
     <section id="cta" class="cta">
     
     <div class="container" data-aos="zoom-in">
+
+        <div class="container" data-aos="zoom-in">
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
