--- a/index.html
+++ b/index.html
@@ -149,14 +149,44 @@
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Meet our team</p>
+          <p></p>Meet our team</p>
         </div>
 
         <div class="row">
 
-    
+          <div class="col-lg-6">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
+              <div class="pic"><img src="assets/img/team/shafin.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Shafin Haque</h4>
+                <span>Fullstack</span>
+                <p>Sophomore in High School</p>
+              </div>
+            </div>
+          </div>
 
-         
+          <div class="col-lg-6 mt-4 mt-lg-0">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
+              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Yousuf Zaman</h4>
+                <span>Frontend</span>
+                <p>Junior in High School</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Henrik Zhang</h4>
+                <span>Frontend</span>
+                <p>Junior in High School</p>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
