--- a/smart-parking.html
+++ b/smart-parking.html
@@ -26,7 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
 
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/styles.css" rel="stylesheet">
   
   <script src="https://smtpjs.com/v3/smtp.js"></script>  
 
