--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Parking Guru</title>
+  <title>Innovate Parking</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">Parking Guru</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html">Innovate Parking</a></h1>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
