--- a/smart-parking.html
+++ b/smart-parking.html
@@ -99,7 +99,7 @@
             </li>
 
             <li>
-                <input class ="center" type="submit" name="submit" value="Submit" />
+                <div class="text-center"><button type="submit" namne="submit">Submit</button></div>
             </li>
         </ul>
 
