added all membesr

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/usuf.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Yousuf Zaman</h4>
                 <span>Frontend</span>
@@ -178,7 +178,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/henrik.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Henrik Zhang</h4>
                 <span>Frontend</span>
