added dropdown menu

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Finding Open Parking Spots</h1>
-          <h2>Using ML to predict open parking spots. <br/>Smart parking with integrated paying.</h2>
+          <h2>Using ML to predict open parking spots. <br/>Smart parking with notifications when parking spots open.</h2>
           <div class="d-lg-flex">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -200,7 +200,6 @@
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="faq-list">
