--- a/smart-parking.html
+++ b/smart-parking.html
@@ -95,7 +95,12 @@
 
             <li>
                 <label>Parking Lot Name<span class="required">*</span></label>
-                <input type="text" name="lot" class="field-long" placeholder="Ex: "></input>
+                <select id="cars" name="cars">
+                  <option value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="fiat">Fiat</option>
+                  <option value="audi">Audi</option>
+                </select>
             </li>
 
             <li>
@@ -113,7 +118,7 @@
 
     <div class="section-title">
       <h2>Contact</h2>
-      <p>If you would like to contact us please input your information below.</p>
+      <p>Having trouble with our smart parking system? Let us know.</p>
     </div>
 
       <div class="col-lg-12 mt-5 mt-lg-0 d-flex align-items-stretch" class="center">
