dropdown menu and first faq

--- a/index.html
+++ b/index.html
@@ -89,12 +89,17 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              temp.
+              The core of our project is our deep learning model using OpenCV. Our deep learning model is able to identify the difference from 
+              a vacant parking spot, and a filled one. Our model edits the orignal photo/video so that it shows which spots are open by highlighting them
+              green. Scroll below to see the model in action.
             </p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-             temp.
+             Our smart parking system will send a user a notifcation via email of when a parking spot opens in their desired parking spot. This feature 
+             integrates a Radar.io location finder and a database of parking spots. A user can enter their name, email, and parking lot, and when a spot opens 
+             they will be notified. This function currently does not work as we do not have live footage, however if given this footage, we would easily be able to
+             implement our existing code to get it fully functioning with the feed.
             </p>
           </div>
         </div>
@@ -134,7 +139,9 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3>How Can You Help?</h3>
-            <p>Temp.</p>
+            <p>If you have access to live footage of parking lots please reach out to us so we can integrate our model with your live footage of your parking lot. Please email us at 
+              shafin1025@gmail.com with business inquiries. 
+            </p>
           </div>
         </div>
 
@@ -205,10 +212,10 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-1">How does the model work?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  Our model first breaks down the individual parking spots of a parking lot. From here we distinguish filled spots
                 </p>
               </div>
             </li>
@@ -227,24 +234,6 @@
               <div id="faq-list-3" class="collapse" data-parent=".faq-list">
                 <p>
                   Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-parent=".faq-list">
-                <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="500">
-              <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" href="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-parent=".faq-list">
-                <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
                 </p>
               </div>
             </li>
