--- a/smart-parking.html
+++ b/smart-parking.html
@@ -74,12 +74,6 @@
 
       <form action="" method="post">
 
-       <!-- First Name: <input type="text" name="first_name"><br>
-        Last Name: <input type="text" name="last_name"><br>
-        Email: <input type="text" name="email"><br>
-        Parking Lot:<input type="text" name="lot"><br>
-        <input type="submit" name="submit" value="Submit"> -->
-
           <ul class="form-style-1">
 
             <li><label>Full Name <span class="required">*</span></label>
@@ -96,10 +90,10 @@
             <li>
                 <label>Parking Lot Name<span class="required">*</span></label>
                 <select id="cars" name="cars">
-                  <option value="volvo">Volvo</option>
-                  <option value="saab">Saab</option>
-                  <option value="fiat">Fiat</option>
-                  <option value="audi">Audi</option>
+                  <option value="volvo">Westgate</option>
+                  <option value="saab">Argonaut Complex</option>
+                  <option value="fiat">Valley Fair Mall</option>
+                  <option value="audi">Oakrdige Mall</option>
                 </select>
             </li>
 
