--- a/Website/smart-parking.html
+++ b/Website/smart-parking.html
@@ -65,7 +65,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
 		
-			<h2>Avaialble Parking Notifications</h2>
+			<h2>Available Parking Notifications</h2>
 			<p>Fill out the form below with your contact info and parking lot info so we can let you know when there is a space available for you!</p>
           
           
