--- a/Website/index.html
+++ b/Website/index.html
@@ -252,7 +252,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>If you would like to contact us please input your information below.</p>
+          <p>Please fill out the form below if you would like to get into contacts with us.</p>
         </div>
 
           <div class="col-lg-12 mt-5 mt-lg-0 d-flex align-items-stretch" class="center">
