added model examples

--- a/Website/index.html
+++ b/Website/index.html
@@ -123,6 +123,13 @@
             have gone through our model.
           
           </p>
+          <br/>
+          <p><i>Here is an example of our modeling working on a static image</i></p>
+          <img src="model_examples/example.png" alt="example 1" style="width:700px;height:400px;">
+          <br/>
+          <p><i>Here is an example on our model working on a video</i></p>
+          <img src="model_examples/examplevid.gif" alt="example 1" style="width:700px;height:400px;">
+
         </div>
         
       </div>
