updated website and firebase

--- a/Website/index.html
+++ b/Website/index.html
@@ -98,7 +98,8 @@
             <p>
              Our smart parking system will send a user a notifcation via email of when a parking spot opens in their desired parking spot. This feature 
              integrates a Radar.io location finder and a database of parking spots. A user can enter their name, email, and parking lot, and when a spot opens 
-             they will be notified. This function currently does not work as we do not have live footage, however if given this footage, we would easily be able to
+             they will be notified. The code for this function is ready, but the feature is more proof of concept becuase we do not have much acces to live footage
+             , however if given this footage, we would easily be able to
              implement our existing code to get it fully functioning with the feed.
             </p>
           </div>
