--- a/Website/smart-parking.html
+++ b/Website/smart-parking.html
@@ -90,10 +90,11 @@
             <li>
                 <label>Parking Lot Name<span class="required">*</span></label>
                 <select id="cars" name="cars">
-                  <option value="volvo">Westgate</option>
-                  <option value="saab">Argonaut Complex</option>
-                  <option value="fiat">Valley Fair Mall</option>
-                  <option value="audi">Oakrdige Mall</option>
+                  <option value="#">Select Your Parking Lot</option>
+                  <option value="1">Westgate</option>
+                  <option value="2">Argonaut Complex</option>
+                  <option value="3">Valley Fair Mall</option>
+                  <option value="4">Oakrdige Mall</option>
                 </select>
             </li>
 
