--- a/Website/index.html
+++ b/Website/index.html
@@ -156,7 +156,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3>The Future</h3>
-            <p>Our Program is built to help communities and we will work with city planners and businesses in order to implement our model. 
+            <p>Our Program is built to help communities and we will work with city planners and businesses in order to implement our model with
+            live, real time footage. Once we have access to this, we will be able to display live open parking spots.
             
             </p>
           </div>
