--- a/Website/smart-parking.html
+++ b/Website/smart-parking.html
@@ -95,6 +95,7 @@
                   <option value="2">Argonaut Complex</option>
                   <option value="3">Valley Fair Mall</option>
                   <option value="4">Oakrdige Mall</option>
+                  <option value="#">Coming Soon...</option>
                 </select>
             </li>
 
