--- a/Website/index.html
+++ b/Website/index.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Finding Open Parking Spots</h1>
-          <h2>Using ML to predict open parking spots. <br/>Smart parking with notifications when parking spots open.</h2>
+          <h2>Using ML to locate open parking spots. <br/>Smart parking with notifications when parking spots open.</h2>
           <div class="d-lg-flex">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -118,11 +118,8 @@
         <div class="section-title">
           <h2>Open Parking Spaces</h2>
           <p>Here is a camera that is hooked up to our model. Here is our model working on footage from a camera. When we pair with cameras we display the original 
-            feed, and then next to it we can display our segmented image with the open spots highlihted green.
-          
+            feed, and then next to it we can display our segmented image with the open spots highlighted green.
           </p>
-          <br />
-          <p><i>This is what the live updated feed of the camera would look like</i></p>
           <br/>
           <p>On the left we have the true video, and the right is the live updating open spots</p>
           <br/>
@@ -132,7 +129,7 @@
           <br/>
           <p><i>The model working on a single frame from the video</i></p>
           <br/>
-          <p>On the left we have the orignal frame, and the right is after segmented frame</p>
+          <p>On the left we have the orignal frame, and on the right is the processed frame</p>
           <br/>
           <img src="model-feed/rawFrame.png" alt="Single Frame" style="width:500px;height:400px;"> 
           <img src="model-feed/updatedFrame.png" alt="Single Frame" style="width:500px;height:400px;"> 
@@ -157,7 +154,7 @@
           <div class="col-lg-9 text-center text-lg-left">
             <h3>The Future</h3>
             <p>Our Program is built to help communities and we will work with city planners and businesses in order to implement our model with
-            live, real time footage. Once we have access to this, we will be able to display live open parking spots.
+            live, real time footage. Once we gain access to more and more footage we will be able to display open parking spots in a number of locations.
             
             </p>
           </div>
