--- a/Website/smart-parking.html
+++ b/Website/smart-parking.html
@@ -51,7 +51,7 @@
     <div class="container">
 		<div class="text-center"><h1>Smart Parking</h1>
 			<br/>
-			<h2>Want to be notified when a parking spot opens up at your location? <br/>Please fill out the form below and we will email you once a spot opens up!</h2>
+			<h2>Want to be notified when a parking spot opens up at your desired location? <br/>Please fill out the form below and we will email you once a spot opens up!</h2>
 		</div>
     </div>
 
@@ -94,10 +94,12 @@
                   <option value="1">Westgate</option>
                   <option value="2">Argonaut Complex</option>
                   <option value="3">Valley Fair Mall</option>
-                  <option value="4">Oakrdige Mall</option>
+                  <option value="4">Oakridge Mall</option>
                   <option value="#">Coming Soon...</option>
                 </select>
             </li>
+            
+            <br/>
 
             <li>
                 <div class="text-center"><button type="submit" namne="submit">Submit</button></div>
