--- a/Website/smart-parking.html
+++ b/Website/smart-parking.html
@@ -72,7 +72,7 @@
 						
       </div>
 
-      <form action="" method="post">
+      <form action="" method="post" class="php-email-form">
 
           <ul class="form-style-1">
 
