--- a/Website/index.html
+++ b/Website/index.html
@@ -181,7 +181,7 @@
               <div class="pic"><img src="assets/img/team/shafin.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Shafin Haque</h4>
-                <span>Fullstack</span>
+                <span>Fullstack, Model Developer</span>
                 <p>Sophomore in High School</p>
               </div>
             </div>
