--- a/Website/index.html
+++ b/Website/index.html
@@ -90,7 +90,7 @@
           <div class="col-lg-6">
             <p>
               The core of our project is our deep learning model using OpenCV. Our deep learning model is able to identify the difference from 
-              a vacant parking spot, and a filled one. Our model edits the orignal photo/video so that it shows which spots are open by highlighting them
+              a vacant parking spot, and a filled one. Our model edits the original photo/video so that it shows which spots are open by highlighting them
               green. Scroll below to see the model in action.
             </p>
           </div>
